feat: add template
